# numqi

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: doc.yml  pypi-publish.yml  unittest.yml
docs/: circuit.md  gate.md  group-symext.md  group.md  index.md  installation.md  misc.md  optimize.md  param.md  q-and-a.md  qec.md  random.md  todo.md  varqec.md
docs/api/: channel.md  circuit.md  dicke.md  entangle.md  entangle_cha.md  entangle_distillation.md  entangle_eof.md  entangle_measure.md  entangle_measure_seesaw.md  entangle_ppt.md  entangle_pureb.md  entangle_symext.md  entangle_upb.md  gate.md  gellmann.md  group.md  group_lie.md  group_spf2.md  group_sym.md  group_symext.md  magic.md  manifold.md  matrix_space.md  param.md  qec.md  random.md  sim.md  sim_dm.md  sim_state.md  state.md  unique_determine.md  utils.md
docs/preliminary/: dicke_basis.md  entanglement_advanced.md  entanglement_basic.md  group_spf2.md
docs/script/: draft_custom_gate.py  draft_varqec.py
docs/tutorial/: dicke_basis.ipynb  dicke_basis.md  gellmann.ipynb  gellmann.md  get_started.ipynb  gradient_descent.md  group.md  maxent.ipynb  maxent.md  parametrize.ipynb  qecc.md  query_grover.ipynb  random.ipynb  state.ipynb
example/: README.md  demo_group.py  demo_group_symext.py  demo_matrix_space.py  demo_matrix_space_numerical_range.py  demo_maxent.py  demo_misc.py  demo_optimize.py  demo_query_grover.py  demo_sqrtm_time.py  demo_superactivation.py  demo_unique_determine.py  draft_misc.py  draft_varqec.py
example/ws_entangle/: demo_eof.py  demo_symext.py  draft_boundary.py  draft_find_BES.py  draft_numerical_range.py  draft_ppt.py  draft_pureb.py  draft_ree.py
example/ws_matrix_space/: README.md  demo_numerical_range.py  demo_schmidt_rank.py
example/ws_unique_determine/: demo_clifford_equivalent.py  demo_ep_povm.py  demo_nqubit_projector.py  demo_qutrit_projector.py  demo_search.py  pauli-indexB-core.json
project/: README.md
project/channel_capacity/: draft00.py
project/entangled_subspace/: ces.ipynb  demo_basic.py  demo_schmidt_rank.py  draft00.py  draft03.py  draft_graph_state.py  draft_paper_example.py  draft_pymanopt.py  range_criterion.ipynb
project/entangler/: draft00.py  draft01.py
project/gme_dm/: README.md  draft00.py  draft01.py  draft02.py  example.ipynb
project/ws00/: draft00.py  draft01.py  draft02.py  draft04.py  draft_dm_cross_section.py  draft_rayleigh_quotient.py
project/ws_ame/: README.md  draft00.py  draft01.py  test00.ipynb
project/ws_ce/: draft00.py
project/ws_clifford/: draft00.py
project/ws_dmrg/: README.md  draft00.py  draft01.py
project/ws_entangled_subpace/: analytic_gm.ipynb  border_rank.ipynb  border_rank.pkl  ces.ipynb  draft00.py  draft_pymanopt.py  gme.ipynb  random_subspace.ipynb  range_criterion.ipynb  robustness.ipynb  robustness.pickle  utils.py
project/ws_gme/: README.md  draft00.py
project/ws_iUD/: README.md  draft00.py  draft01.py  draft02.py  draft03.py  draft04.py  draft05.py
project/ws_irrep/: README.md  SymmetricExtensionBoundary.m  demo_hermitian_basis.py  draft00.m  draft00.py  draft01.py
project/ws_manifold/: draft00.py
project/ws_matrix_space/: README.md  draft00.py  draft01.py
project/ws_numerical_range/: draft00.py  draft01.py  (+4 more)
scripts/: draft_action_mkdocs.py
tests/: _circuit_torch_utils.py  _torch_model.py  test_channel.py  test_circuit.py  test_coherence.py  test_dicke.py  test_gate.py  test_gellmann.py  test_group_basic.py  test_group_lie.py  test_group_spf2.py  test_group_symext.py  test_group_symmetric.py  test_magic.py  test_manifold.py  test_manifold_ABk.py  test_matrix_space.py  test_matrix_space_clebsch_gordan.py  test_matrix_space_gradient.py  test_matrix_space_hierarchy.py  test_matrix_space_numerical_range.py  test_matrix_space_superactivation.py  test_maximum_entropy.py  test_optimal_control.py  test_optimize.py  test_param.py  test_param_ABk.py  test_qec.py  test_query.py  test_random.py  test_sim_circuit.py  test_sim_clifford.py  test_sim_state.py  test_state.py  test_torch_op.py  test_unique_determine.py  test_utils.py
ws00/: draft00.py
(+326 files in other folders)
