[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "numqi"
authors = [
    { name = "husisy", email = "donot@mail.me" },
]
description = "a numpy-based quantum information toolbox"
readme = "README.md"
keywords = ["quantum information"]
license = { text = "GNU Affero General Public License v3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'numpy',
    'opt_einsum',
    'scipy',
    'tqdm',
    'sympy',
    'torch',
    'cvxpy',
    'matplotlib',
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "twine",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    # below for building documentation
    "mkdocs",
    "jupyter",
    "ipywidgets",
    "mkdocs-material",
    "mkdocs-jupyter",
    "pymdown-extensions",
    "mkdocstrings[python]",
    # below for building pypi package
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/husisy/numqi/"
Documentation = "https://husisy.github.io/numqi/"
Issues = "https://github.com/husisy/numqi/issues"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools_scm]
write_to = "python/numqi/_version.py"

[tool.setuptools.package-data]
numqi = ["_data/*"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
